courses/430_programming-languages/assignment-6/tests/error/hw5_error23.nex
print "should not get here:n";
1 / 0;
anon (c:int, b:int):int { var a:int; var a:int; }(1,1);
